fix: study on mobile

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,6 @@
+* {
+  -webkit-tap-highlight-color: transparent;
+}
 :root {
   --themeColor: #fa3333;
   --scale: 1;
